[gd_scene load_steps=9 format=3 uid="uid://8fuuslar50sj"]

[ext_resource type="Script" uid="uid://cbsae6m2fs7fv" path="res://scripts/player.gd" id="1_dqkch"]
[ext_resource type="Texture2D" uid="uid://dwy36e8o5dakl" path="res://assets/entities/player/sprite.png" id="2_qlg0r"]
[ext_resource type="PackedScene" uid="uid://dfo11eu0peums" path="res://scenes/arrow.tscn" id="2_tuyoq"]
[ext_resource type="PackedScene" uid="uid://dca1c3dpoabp8" path="res://scenes/sound_pulse.tscn" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://dp0sdb83122js" path="res://assets/entities/objects/bow_sprite.png" id="3_tuyoq"]
[ext_resource type="PackedScene" uid="uid://dyjipdqqhb3nf" path="res://scenes/health_management.tscn" id="4_fjrip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivbhp"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ivbhp"]
radius = 22.0
height = 72.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_dqkch")
arrow_scene = ExtResource("2_tuyoq")
max_force_multiplier = 3.0
sound_pulse_scene = ExtResource("3_fjrip")
step_sound_min_radius = 450.0
step_sound_max_radius = 5000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 5.96046e-08)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_qlg0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ivbhp")

[node name="BowSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(27, 14)
rotation = -2.63196
scale = Vector2(0.05, 0.061291)
texture = ExtResource("3_tuyoq")

[node name="BowForceLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 500.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="HurtBox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" groups=["Player"]]
shape = SubResource("CapsuleShape2D_ivbhp")

[node name="HealthManagement" parent="." instance=ExtResource("4_fjrip")]
position = Vector2(-49, -63)
hurtbox = NodePath("../HurtBox")
